--- a/EssentialFeed/EssentialFeediOS/Feed Presentation/en.lproj/Feed.strings
+++ b/EssentialFeed/EssentialFeediOS/Feed Presentation/en.lproj/Feed.strings
@@ -2,7 +2,7 @@
   Feed.strings
   EssentialFeed
 
-  Created by Phincon on 26/08/24.
+  Created by Amin faruq on 26/08/24.
   
 */
 "FEED_VIEW_TITLE" = "My Feed";
